@@ -10,48 +10,43 @@
 1. Build nice, small cross-platform [JavaFX](https://openjfx.io)-based desktop apps with native installers
     - Apx 20-30mb .dmg, .msi and .deb installers - check out the example builds in
       [releases](https://github.com/wiverson/maven-jpackage-template/releases).
-2. Just use Maven - no shell scripts required. Use standard Maven dependency system to automatically manage ordinary JAR
-   dependencies (including transitive Maven dependencies).
-3. Generate [macOS (.dmg), Windows (.msi) and Unix (e.g. deb/rpm) packages/installers](https://github.com/wiverson/maven-jpackage-template/releases)
-   automatically with [GitHub Actions](https://github.com/wiverson/maven-jpackage-template/tree/main/.github/workflows)
+2. Just use Maven - no shell scripts required.
+3. Use standard Maven dependency system to automatically manage ordinary jar dependencies
+    - Automatically convert ordinary jars into modules
+4. Generate [macOS (.dmg), Windows (.msi) and Unix (e.g. deb/rpm)](https://github.com/wiverson/maven-jpackage-template/releases)
+installers/packages automatically
+with [GitHub Actions](https://github.com/wiverson/maven-jpackage-template/tree/main/.github/workflows)
 
-## Problems
+## Overview
 
 The [jlink](https://docs.oracle.com/en/java/javase/15/docs/specs/man/jlink.html) &
 [jpackage](https://docs.oracle.com/en/java/javase/15/docs/specs/man/jpackage.html) tools provide nice, small installers,
-using the [Java module system](https://www.baeldung.com/java-9-modularity) to generate embedded, stripped down JVMs.
-Unfortunately, modules are in practice a bit difficult to use, as it expects Java libraries to add module information (
-typically either via extra manifest entries or a new, compiled module-info.java/.class).
+using the [Java module system](https://www.baeldung.com/java-9-modularity) to generate trimmed custom Java virtual
+machines. Unfortunately, the Java module system is in practice a bit difficult to use, as it expects Java libraries to
+add special module information.
 
-In the worst-case scenario, every time a developer adds a standard Maven dependency, the entire build process breaks due
-to module problems. This presents a grim choice - either give up on tools like jpackage or give up on Maven dependency
+In a typical scenario, every time a developer adds a standard Maven dependency, the entire build process breaks due to
+module problems. This presents a grim choice - either give up on tools like jpackage or give up on Maven dependency
 management and return to the bad old days of shell scripts and manually managing library paths.
 
-## Solution
+Instead, this project uses a [Maven plugin](https://github.com/wiverson/jtoolprovider-plugin) to gather and transform
+Maven declared dependencies into modules. More technical details about how this works can be found in the Q&A below and
+in the documentation for the plugin.
 
-In this sample project, these problems are managed through the use of a single
-application-scoped [shaded jar](https://maven.apache.org/plugins/maven-shade-plugin/). The application's normal Maven
-dependencies are merged into a single JAR, and then jdeps automatically generates the module-info.java.
+This leaves us with relatively simple Maven project template that can be used to build nice, small native installers for
+a JavaFX application using only Maven, Java 15/16, and jpackage. On macOS XCode is required, and on Windows the
+free [WiX Toolset](https://wixtoolset.org/). For most dependencies, just add a Maven dependency declaration and things
+should just work.
 
-While this is a *terrible* strategy for libraries, it works just fine for end-user desktop applications.
-
-So, what we have here is a pretty small, simple Maven project template that can be used to build nice, small native
-installers for a JavaFX application using only Maven, Java 15, and jpackage. In addition, on macOS XCode is required,
-and on Windows the free [WiX Toolset](https://wixtoolset.org/).
-
-On macOS, Windows and Linux these installers are coming in at around 30-40mb. This demonstration app includes several
-native desktop demonstration features - for example, drag-and-drop from the Finder/Explorer, as well as a few macOS Dock
-integration examples. The "Hello World" versions are closer to 30mb than 40mb.
-
-This also provides an eventual path for migrating to fully modularized libraries. As libraries are converted to modules,
-eventually the build could be migrated to Maven-managed modules, perhaps eventually leveraging
-[Maven copy-dependencies](https://maven.apache.org/plugins/maven-dependency-plugin/copy-dependencies-mojo.html).
+The generated installers come in at around 30-40mb. The included source includes several native desktop demonstration
+features - for example, drag-and-drop from the Finder/Explorer, as well as a few macOS Dock integration examples.
+Removing the code and the demonstration dependendencies gets a "Hello World" build size closer to 30mb than 40mb.
 
 ## Cool Features
 
 Here are few cool things in this template:
 
-- Only uses Maven. No shell scripts required.
+- Only uses Java and Maven. No shell scripts required.
 - Includes sample [GitHub Actions](https://github.com/wiverson/maven-jpackage-template/tree/main/.github/workflows) to
   build macOS, Windows and Linux installers
 - Demonstrates setting the application icon
@@ -62,11 +57,6 @@ Here are few cool things in this template:
     - Change the Dock icon dynamically on macOS
     - Menu on the top for macOS, in the window itself on Windows
     - Request user attention (bouncing dock icon) on macOS
-
-# Sponsor
-
-This project is sponsored by [ChangeNode.com](https://changenode.com/) - if you would like to add easy automatic
-updates, crash reporting, analytics, etc. to your Java/JavaFX desktop application, go check it out.
 
 # Usage
 
@@ -87,8 +77,8 @@ To do everything up until the actual installer generation...
 2. Install [Apache Maven 3.6.3](http://maven.apache.org/install.html) or later and make sure it's on your path.
     - Verify this by opening a fresh Terminal/Command Prompt and typing `mvn --version`.
 3. Clone/download this project.
-5. On Java 15, add the jpackage configuration to your MAVEN_OPTS for your shell environment (described in more detail
-   below).
+4. On Java 15, you will need to add the jpackage configuration to your MAVEN_OPTS for your shell environment
+   ([described in more detail](docs/java-15-jpackage.md)).
     - On Java 15, verify this is working by typing `mvn --version` and notice the warning about using an incubator
       project.
     - Java 16 is expected to bundle jpackage, which will allow you to skip this step.
@@ -104,81 +94,23 @@ Default locale: en_US, platform encoding: Cp1252
 OS name: "windows 10", version: "10.0", arch: "amd64", family: "windows"
 ```
 
-6. macOS: verify XCode is installed and needed agreements accepted.
+5. macOS: verify XCode is installed and needed agreements accepted.
     - Just launch XCode and accept, or verify in Terminal with the command `sudo xcodebuild -license`.
-7. Windows: install [Wix 3 binaries](https://github.com/wixtoolset/wix3/releases/).
+6. Windows: install [Wix 3 binaries](https://github.com/wixtoolset/wix3/releases/).
     - As of this writing, merely installing Wix via the installer was sufficient for jpackage to find it.
-8. Final step: run `mvn clean install` from the root of the project to generate the `target\TestApp.dmg`
+7. Final step: run `mvn clean install` from the root of the project to generate the `target\TestApp.dmg`
    or `target\TestApp.msi` (installer).
+    - Note that the actual generated installer will include a version number in the file name
     - For reference, here is a complete run log for [a successful run on Windows](docs/sample-windows-run.md).
 
 Because these builds use stripped down JVM images, the
 [generated installers are in the 30-40mb range](https://github.com/wiverson/maven-jpackage-template/releases).
 
-## jpackage Configuration
+# Sponsor
 
-This project relies on [jtoolprovider-plugin](https://github.com/wiverson/jtoolprovider-plugin)
-to perform key build steps. To generate the actual installers, the jpackage tool must be available to the ToolProvider
-API. For most people, adding a `MAVEN_OPTS` environment variable will work nicely.
-
-For example, on macOS, this can be done by adding to the following line to the `~/.zshrc` file.
-
-`export MAVEN_OPTS="--add-modules jdk.incubator.jpackage"`
-
-Current versions of Windows 10 have a nice UI for adding an environment variable. You can find it in the modern control
-panel via search - just start a search for "env" and that should bring up the appropriate control panel. Note that on
-Windows, you don't need the quote marks - here's a
-[screenshot illustrating the proper configuration for a Windows 10 environment](https://github.com/wiverson/maven-jpackage-template/issues/2)
-.
-
-Unfortunately, as of this writing adding this entry to the IntelliJ options for Maven (either in the IntelliJ Maven JVM
-importer UI or via `project-directory/.mvn/jvm.config`) will break the Maven sync. This bug is tracked by JetBrains as
-[IDEA-246963](https://youtrack.jetbrains.com/issue/IDEA-246963). There is a `.mvn/Xjvm.config file` in this project -
-once the bug is fixed, or if you use a different editor, just try renaming that file to `jvm.config`. Or, presumably,
-when Java 16 ships and jpackage is no longer in incubation this will just go away as an issue.
-
-This version of the project uses Maven Profiles to set a platform property. This property is then used to generate paths
-to the proper version of the JavaFX modules and the configuration for
-the [platform-specific jpackage execution](https://github.com/wiverson/maven-jpackage-template/tree/main/src/packaging).
-
-# How Does This Work?
-
-If you are not familiar with the standard Maven build lifecycle, you are highly encouraged to review the documentation
-["Introduction to the Build Lifecycle"](https://maven.apache.org/guides/introduction/introduction-to-the-lifecycle.html)
-to understand how Maven builds work.
-
-The project automatically activate platform-specific
-[profiles](https://maven.apache.org/guides/introduction/introduction-to-profiles.html), setting the
-properties `javafx.libs` and `javafx.mods` to the proper locations, and also specifying the platform-specific
-configuration file.
-
-### Maven package
-
-1. Use [maven-shade-plugin](https://maven.apache.org/plugins/maven-shade-plugin/) to generate a merged JAR containing
-   all the Maven managed dependencies. It strips out all the
-   existing [module-info](https://www.oracle.com/corporate/features/understanding-java-9-modules.html), unless you
-   exclude it that manually via the filters. This generated jar file is saved in the `target/shaded-jar/` folder.
-2. Uses the [maven-antrun-plugin](https://maven.apache.org/plugins/maven-antrun-plugin/) to unzip the generated JAR into
-   a `target/unpacked-shade/`
-3. Runs [jtoolprovider-plugin](https://github.com/wiverson/jtoolprovider-plugin) to
-   run [jdeps](https://docs.oracle.com/en/java/javase/15/docs/specs/man/jdeps.html) on the `target/unpacked-shade/`
-   directory to generate a new module-info file for the project.
-4. Runs [moditect-maven-plugin](https://github.com/moditect/moditect) to compile and add the module-info back into the
-   shaded jar file.
-
-### Maven verify
-
-1. _(Optional: requires activating profile add-jlink-package, e.g. `mvn clean verify -Padd-jlink-package`)_
-   jtoolprovider-plugin will run [jlink](https://www.baeldung.com/jlink) to generate a native image. This is mostly
-   helpful for local development only - end-users generally prefer an installer.
-
-### Maven install
-
-1. Tells the [maven-install-plugin](https://maven.apache.org/plugins/maven-install-plugin/) to NOT install the files for
-   this project in the local .m2 repository. No need to waste time and disk space copying unneeded files.
-2. If Maven detects the build is running on macOS or Windows, it will automatically add
-   running [jpackage](https://docs.oracle.com/en/java/javase/15/docs/specs/man/jpackage.html) via jtoolprovider-plugin
-   to the install phase.
+This project is sponsored by [ChangeNode.com](https://changenode.com/) - if you would like to add easy automatic
+updates, crash reporting, analytics, etc. to your Java/JavaFX desktop application, go check it out... and be sure to
+subscribe for more information about desktop Java development.
 
 # Help
 
@@ -193,20 +125,25 @@ If you need consulting support, feel free to reach out to [ChangeNode.com](https
 
 # Miscellaneous Q&A
 
+##### Q: Can you give me a few more details about how this works?
+
+A: In this project, a plugin walks through all the declared Maven dependencies. If the dependency is a module, cool,
+drop it into a directory. If the dependency declares a bad module-info, strip it and regenerate it. If it's not a
+module (or it was stripped), use jdeps to turn it into a module automatically.
+
+The same plugin is then used to run jdeps on the user code, add the module-info to the app's module, and then finally
+run jpackage to tie it all together.
+
+The prior version of this template used the Maven Shade plugin. Sadly, that didn't work with a lot of scenarios, such as
+multi-release jars, jars with bad module-info, jars that declared services, etc. So, the new plugin and this updated
+template.
+
 ##### Q: What about the javafx.web.jmod files? I'm getting errors when I'm trying to use javafx.web?
 
 A: GitHub won't allow cloning a template if the source has files over 10mb in size. The javafx.web components basically
 bundle a full native web browser under the covers. As of JavaFX 15 the javafx.web.jmod is roughly 25mb in size. If you
 need it, you can [download it](https://gluonhq.com/products/javafx/) and install it in the JavaFX projects in your local
 project.
-
-##### Q: A few things seem to be hard-coded...?
-
-A: Yeah. There are a lot of moving parts in a build script like this. Most notably, the name of the generated
-application is set to Test-App-1.0 in a few places. Unfortunately, this is kind of complicated - for example, the name
-of the build application exists both in the GitHub Actions and the pom.xml. I tried to strike a balance between using
-various properties to avoid duplication and (worst case) degenerating into a sea of strange expressions. Hopefully you
-can follow everything, but if you have questions or need consulting support you can always reach out.
 
 ##### Q: Tell me a bit about the Linux version?
 
@@ -231,15 +168,10 @@ for this project downloads the Wix Installer toolkit and adds it to the path to 
 installer. On your local dev machine just install [WiX Toolset](https://wixtoolset.org/)
 locally instead - it'll be a lot faster.
 
-As of this writing, the Windows options will work, but the lack of a version number means that right now you have to
-manually uninstall and reinstall via the Windows Control Panel to update to a new version. Not a big deal for
-development, but when you go to install an update you'll have to uninstall/reinstall manually.
-
-In a proper CI build, the installer version should be set by the CI system. Use this project as a starting point and add
-the version info based on your CI and versioning approach. Perhaps some combination of a GUID and/or timestamp.
-
-As an aside, [ChangeNode](https://changenode.com) supports forcing reinstalls of .msi regardless of the installer
-version - for example, if you need to revert a deployment to an earlier version due to a regression.
+Make sure that you set the --win-upgrade-uuid in the file `src\packaging\windows-jpackage.txt` to a unique id! This UUID
+is used to uniquely identify the app as YOUR app by the installer system, and is critical for allowing users to
+seamlessly upgrade. You can quickly [grab a UUID of your own](https://www.uuidgenerator.net/) and pop that value in
+instead.
 
 ##### Q: What about macOS Signing?
 
@@ -250,7 +182,7 @@ or [this command-line signing tutorial](https://blog.dgunia.de/2020/02/12/signed
 
 ##### Q: Can I generate macOS installers on Windows, or Windows installers on macOS? Or macOS/Windows on Linux?
 
-A: [No,](https://openjdk.java.net/jeps/392) but this project uses GitHub workflows to generate
+A: [No](https://openjdk.java.net/jeps/392), but this project uses GitHub workflows to generate
 [macOS](https://github.com/wiverson/maven-jpackage-template/blob/main/.github/workflows/maven-build-installer.yml)
 and
 [Windows](https://github.com/wiverson/maven-jpackage-template/blob/main/.github/workflows/maven-build-installer-windows.yml)
@@ -258,7 +190,7 @@ installers automatically, regardless of your development platform. This means th
 you could do your dev work on Linux and rely on the GitHub Actions to generate macOS and Windows builds. If you need
 help, reach out to [ChangeNode.com](https://changenode.com/).
 
-You still should (of course) do QA on your apps, but that's a different topic.
+You still should (of course) do platform specific testing on your apps, but that's a different topic.
 
 ##### Q: Does this support auto-updating, crash reporting, or analytics?
 
@@ -266,10 +198,21 @@ A: No... for that, you should check out [ChangeNode.com](https://changenode.com/
 
 ##### Q: I'd rather use shell scripts.
 
-A: Cool - check out [JPackageScriptFX](https://github.com/dlemmermann/JPackageScriptFX) - the original shell scripts
+A: Ok. Check out [JPackageScriptFX](https://github.com/dlemmermann/JPackageScriptFX) - the original shell scripts
 used as a reference when I initially started work on this project.
 
 ##### Q: I didn't realize JavaFX was so cool - any pointers?
 
-Sure - here's my [personal list of cool JavaFX resources](https://gist.github.com/wiverson/6c7f49819016cece906f0e8cea195ea2),
-which includes links to a few other big lists of resources.
+Sure - here's
+my [personal list of cool JavaFX resources](https://gist.github.com/wiverson/6c7f49819016cece906f0e8cea195ea2), which
+includes links to a few other big lists of resources.
+
+##### Q: Any Maven tips?
+
+If you are not familiar with the standard Maven build lifecycle, you are highly encouraged to review the documentation
+["Introduction to the Build Lifecycle"](https://maven.apache.org/guides/introduction/introduction-to-the-lifecycle.html)
+to understand how Maven builds work.
+
+The project also uses os-activated, platform-specific
+[profiles](https://maven.apache.org/guides/introduction/introduction-to-profiles.html) for configuration - really cool
+for setting up platform-specific stuff.
